<resources>
    <string name="app_name">Sfedu.schedule</string>
    <string name="data_loading_error">Ошибка загрузки данных</string>
    <string name="sfedu_ru">\@sfedu.ru</string>
<!--checkText-->
    <string name="pattern_name">[^а-яА-Яa-zA-Z-]+</string>
    <string name="pattern_name_symbols">а-Я a-Z -</string>
    <string name="pattern_login">[^0–9a-zA-Z_.-]+</string>
    <string name="pattern_login_symbols">0–9 a-z A-Z . _ -</string>
    <string name="pattern_password">^-+</string>
    <string name="pattern_password_symbols">*</string>
<!--request / personal-->
    <string name="activity_request_title">Что ищем?</string>
    <string name="activity_personal_information_title">Мой профиль</string>
    <string name="choose_faculty">Выберите подразделение</string>
    <string name="choose_contract">Выберите форму обучения</string>
    <string name="choose_course">Выберите курс</string>
    <string name="choose_group">Выберите группу</string>
    <string name="choose_subgroup">Выберите подгруппу</string>
    <string name="choose_semester">Выберите семестр</string>
    <string name="choose_date">Выберите дату</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="get_schedule">ПОКАЗАТЬ РАСПИСАНИЕ</string>
    <string name="set_personal_information">ЗАПОЛНИТЬ ПРОФИЛЬ</string>
    <string name="semester_spinner_item">%d - %d год</string>
    <string name="button_fill_from_personal">Моя группа</string>
    <string name="button_fill_from_last">Последнее</string>
    <string name="back_yes">Уверен</string>
    <string name="back_no">Не уверен</string>
    <string name="request_on_back">Завершить сессию: Вы уверены?</string>
    <string name="mail_is_taken">Почта уже занята</string>
    <string name="sending_message_error">Ошибка отправки сообщения</string>
    <string name="internal_error">Внутренняя ошиибка</string>
    <string name="crush">%s, повторите пожалуйста заного</string>
    <string name="wrong_code">Неверный код</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
<!--schdeule-->
    <string name="activity_schedule_title">Вот что нашлось:</string>
<!--registration / identification-->
    <string name="button_skip_identify">ПРОДОЛЖИТЬ БЕЗ АВТОРИЗАЦИИ</string>
    <string name="button_identify">ВОЙТИ</string>
    <string name="button_registration">ЗАРЕГЕСТРИРОВАТЬСЯ</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_accept">Подтвердите пароль</string>
    <string name="sent">ОТПРАВИТЬ</string>
    <string name="confirm_code">Код подтверждения</string>
    <string name="activity_registration_title">Регистрация</string>
    <string name="string_too_short">Минимальная длина поля: %d символов!</string>
    <string name="string_too_long">Ммакисмальная длина поля: %d символов!</string>
    <string name="wrong_login">Неверный логин!</string>
    <string name="wrong_password">Неверный пароль!</string>
    <string name="wrong_data">Неверный логин либо пароль!</string>
    <string name="passwords_not_equals">Пароли не совпадают!</string>
    <string name="not_mail">Неверный формат записи почтового ящика!</string>
    <string name="not_code">Неверный код!</string>
    <string name="invalid_symbols">Поле может состоять только из сдедующих символов: %s</string>
    <string name="OK">OK</string>
    <string name="invalid_session">Последняя сессия недействительна</string>
    <string name="registration_on_back">Отменить регистрацию: Вы уверены?</string>
    <!--admin panel-->
    <string name="activity_admin_panel_title">Паель управления контентом:</string>
    <string name="delete">УДАЛИТЬ</string>
    <!--SUBS -->
    <string name="jan">Январь</string>
    <string name="feb">Февраль</string>
    <string name="mar">Март</string>
    <string name="apr">Апрель</string>
    <string name="may">Май</string>
    <string name="jun">Июнь</string>
    <string name="jul">Июль</string>
    <string name="aug">Август</string>
    <string name="sep">Сентябрь</string>
    <string name="oct">Октябрь</string>
    <string name="nov">Ноябрь</string>
    <string name="dec">Декабрь</string>
    <string name="mon">Понедельник</string>
    <string name="tue">Вторник</string>
    <string name="wed">Среда</string>
    <string name="thu">Четверг</string>
    <string name="fri">Пятница</string>
    <string name="sat">Суббота</string>
    <string name="sun">Воскресенье</string>
    <string name="degree_bachelor">Бакалвариат</string>
    <string name="degree_specialist">Специалитет</string>
    <string name="degree_masters">Магистратура</string>
    <string name="class_1">8.00–9.35</string>
    <string name="class_2">9.50–11.25</string>
    <string name="class_3">11.55–13.30"</string>
    <string name="class_4">13.45–15.20</string>
    <string name="class_5">15.50–17.25</string>
    <string name="class_6">17.50–19.15</string>

</resources>