<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/button_save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal|top"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/TextViewPrimary"
                        android:labelFor="@+id/spinner_faculty"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/choose_faculty" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner_faculty"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_delete_faculty"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_gravity="bottom|end"
                            android:background="@drawable/custom_button"
                            android:text="@string/delete"
                            android:textColor="@color/blue_shadow"
                            android:textSize="12sp" />

                    </LinearLayout>


                    <TextView
                        style="@style/TextViewPrimary"
                        android:labelFor="@+id/spinner_contract"
                        android:text="@string/choose_contract" />

                    <Spinner
                        android:id="@+id/spinner_contract"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/TextViewPrimary"
                        android:labelFor="@+id/spinner_course"
                        android:text="@string/choose_course" />

                    <Spinner
                        android:id="@+id/spinner_course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/TextViewPrimary"
                        android:labelFor="@+id/spinner_group"
                        android:text="@string/choose_group" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner_group"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_delete_group"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_gravity="bottom|end"
                            android:background="@drawable/custom_button"
                            android:text="@string/delete"
                            android:textColor="@color/blue_shadow"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <EditText
                android:id="@+id/edit_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/text_first_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <EditText
                android:id="@+id/edit_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/text_second_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <EditText
                android:id="@+id/edit_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patronymic"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <TextView
                android:id="@+id/text_third_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/save"
        android:textColor="@color/blue_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>