<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_skip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_skip_identify"
        android:textColor="@color/blue_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/edit_login"
        app:layout_constraintTop_toBottomOf="@id/button_skip"
        tools:layout_editor_absoluteX="2dp" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_login_suffix"
        app:layout_constraintTop_toBottomOf="@id/button_skip" />

    <TextView
        android:id="@+id/text_login_suffix"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/text_login_hint"
        app:layout_constraintLeft_toRightOf="@id/edit_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_skip" />

    <TextView
        android:id="@+id/text_login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edit_login"
        tools:layout_editor_absoluteX="11dp" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/text_login_hint"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/text_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        tools:layout_editor_absoluteX="11dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_identify"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_identify"
        android:textColor="@color/blue_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_hint" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/button_registration"
        app:layout_constraintTop_toBottomOf="@id/button_identify"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_registration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/button_registration"
        android:textColor="@color/blue_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_identify" />

</androidx.constraintlayout.widget.ConstraintLayout>