<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/text_mail_suffix"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_mail_suffix"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/text_mail_hint"
        app:layout_constraintLeft_toRightOf="@id/edit_mail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_mail_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_mail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sent_mail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/sent"
        android:textColor="@color/blue_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mail_hint" />

    <EditText
        android:id="@+id/edit_mail_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_code"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/text_mail_hint"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/text_mail_confirm_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_mail_confirm" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_mail_confirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/sent"
        android:textColor="@color/blue_shadow"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mail_confirm_hint" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mail_confirm_hint" />

    <TextView
        android:id="@+id/text_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <EditText
        android:id="@+id/edit_password_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_accept"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/text_password_hint"
        tools:layout_editor_absoluteX="90dp" />

    <TextView
        android:id="@+id/text_password_accept_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/edit_password_accept" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/sent"
        android:textColor="@color/blue_shadow"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_accept_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>